<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chart"

            android:icon="@drawable/ic_equalizer_black_24dp"
            android:title="@string/menu_chart" />
        <item
            android:id="@+id/nav_device"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/menu_device" />
    </group>

    <item android:title="@string/menu_title_help">
        <menu>
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/menu_support" />
        </menu>
    </item>

</menu>
