<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_device">

    <fragment
        android:id="@+id/nav_device"
        android:name="ftf.grsu.workshop.ui.device.DeviceFragment"
        android:label="@string/menu_device"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_chart"
        android:name="ftf.grsu.workshop.ui.chart.ChartFragment"
        android:label="@string/menu_chart"
        tools:layout="@layout/fragment_device" />

    <fragment
        android:id="@+id/nav_support"
        android:name="ftf.grsu.workshop.ui.support.SupportFragment"
        android:label="@string/menu_support"
        tools:layout="@layout/fragment_support" />


</navigation>