<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="1dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        app:srcCompat="@drawable/ic_equalizer_black_24dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_source_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel" />

            <TextView
                android:id="@+id/text_channel_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textColor="@color/design_default_color_on_secondary" />
        </LinearLayout>

        <Switch
            android:id="@+id/switch_activity"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:text="@string/activity" />

    </LinearLayout>
</LinearLayout>